# c-app

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.c  other_source.c
